<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="intakeViewerViewModel"
            type="com.example.calorieintaketracker.intakeviewer.IntakeViewerViewModel"/>
        <variable
            name="intake"
            type="com.example.calorieintaketracker.database.CalorieIntake"/>
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/description_layout"
                android:id="@+id/name_layout"
                android:padding="15dp"
                app:helperText="Name"
                app:layout_constraintVertical_chainStyle="spread"
                app:layout_constraintVertical_bias=".1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/food_name"
                    android:padding="15dp"
                    app:foodNameFormatted="@{intake}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/name_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/cancel_button"
                android:padding="15dp"
                app:helperText="Description"
                android:id="@+id/description_layout">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/food_calorie"
                    android:padding="15dp"
                    android:text="@{intake.intakeQuantity}" />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/description_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/done_button"
                android:hint="@string/foodtime"
                android:text="@string/back_button_text"
                android:onClick="@{() -> intakeViewerViewModel.onCancel()}"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                />

            <Button
                android:id="@+id/done_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cancel_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/delete_button_text"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="16sp"
                android:onClick="@{() -> intakeViewerViewModel.onDone()}"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
